struggling with ns1 need to write as rit

--- a/examples/parse-csv-write-resitrdf.ipynb
+++ b/examples/parse-csv-write-resitrdf.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import rdflib\n",
     "\n",
     "from rdflib import Graph, Literal, BNode, Namespace, RDF,RDFS,OWL, URIRef\n",
     "from rdflib.namespace import DC, FOAF\n",
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,16 +286,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+      "<rdf:RDF\n",
+      "   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
+      "   xmlns:rdfs=\"http://www.w3.org/2000/01/rdf-schema#\"\n",
+      ">\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpcs\">\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#service\"/>\n",
+      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\n",
+      "    <rdfs:label>hpcs</rdfs:label>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#researchsoftware\">\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "    <rdfs:label>researchsoftware</rdfs:label>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#service\"/>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#schedgroup\">\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#feature\"/>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdfs:label>schedgroup</rdfs:label>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#ismemberof\">\n",
+      "    <rdfs:label>ismemberof</rdfs:label>\n",
+      "    <rdfs:subPropertyOf rdf:resource=\"http://www.w3.org/2002/07/owl#topObjectProperty\"/>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#ObjectProperty\"/>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#isa\">\n",
+      "    <rdfs:label>isa</rdfs:label>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#ObjectProperty\"/>\n",
+      "    <rdfs:subPropertyOf rdf:resource=\"http://www.w3.org/2002/07/owl#topObjectProperty\"/>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#\">\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Ontology\"/>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#group\">\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#feature\"/>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "    <rdfs:label>group</rdfs:label>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#personnel\">\n",
+      "    <rdfs:label>personnel</rdfs:label>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit\">\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#system\">\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "    <rdfs:label>system</rdfs:label>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\">\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#system\"/>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "    <rdfs:label>hpc</rdfs:label>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#feature\">\n",
+      "    <rdfs:label>feature</rdfs:label>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#service\">\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "    <rdfs:label>service</rdfs:label>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#project\">\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#feature\"/>\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
+      "    <rdfs:label>project</rdfs:label>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#iceberg\">\n",
+      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\n",
+      "    <rdfs:label>iceberg</rdfs:label>\n",
+      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
+      "  </rdf:Description>\n",
+      "</rdf:RDF>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "n=Namespace()"
+    "#n=Namespace()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#n = Namespace(\"http://rcg.group.shef.ac.uk/resitowl/resit#\")\n",
+    "#n.hpcs # as attribute\n",
+    "# = rdflib.term.URIRef(u'http://example.org/Person')\n",
+    "\n",
+    "#n['first%20name'] # as item - for things that are not valid python identifiers\n",
+    "# = rdflib.term.URIRef(u'http://example.org/first%20name')\n",
+    "\n",
+    "grit = rdflib.Graph()\n",
+    "grit.parse('resit.ttl', format='turtle')\n",
+    "\n",
+    "#RIT=Namespace('rit:')\n",
+    "#RIT.hpcs=rdflib.term.URIRef(u'http://rcg.group.shef.ac.uk/resitowl/resit#hpcs')\n",
+    "\n",
+    "#RIT['rit'] # as item - for things that are not valid python identifiers\n",
+    "# = rdflib.term.URIRef(u'http://example.org/first%20name')\n",
+    "from rdflib.namespace import Namespace, NamespaceManager\n",
+    "from rdflib.namespace import RDF, FOAF\n",
+    "\n",
+    "RIT = Namespace('http://rcg.group.shef.ac.uk/resitowl/resit#')\n",
+    "namespace_manager = NamespaceManager(Graph())\n",
+    "namespace_manager.bind('rit', RIT, override=False)\n",
+    "RIT.hpcs=rdflib.term.URIRef(u'http://rcg.group.shef.ac.uk/resitowl/resit#hpcs')\n",
+    "FOAF.person\n",
+    "\n",
+    "#RIT.hpcs\n",
+    "\n",
+    "#s = grit.serialize(format='n3')\n",
+    "#print(s)\n",
+    "\n",
+    "print(grit.serialize().decode())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,23 +433,21 @@
     "g.add((resit,RDF.type,URIRef(\"http://rcg.group.shef.ac.uk/resitowl/resit#ismemberof\")))\n",
     "g.add( (resit, FOAF.nick, Literal(\"donna\", lang=\"foo\")) )\n",
     "g.add( (resit, FOAF.name, Literal(\"Donna Fales\")) )\n",
-    "g.add( (resit, FOAF.mbox, URIRef(\"mailto:donna@example.org\")) )"
+    "g.add( (resit, FOAF.mbox, URIRef(\"mailto:donna@example.org\")) )\n",
+    "\n",
+    "g.add( (resit, RIT.hpcs, Literal('iceberg') ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'RIT' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-5c7ba64196fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"dc\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"foaf\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFOAF\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"rit\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRIT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"--- serializing ---\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'RIT' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- serializing ---\n"
      ]
     }
    ],
@@ -329,7 +455,7 @@
     "# Bind a few prefix, namespace pairs for more readable output\n",
     "g.bind(\"dc\", DC)\n",
     "g.bind(\"foaf\", FOAF)\n",
-    "g.bind(\"rit\", RIT)\n",
+    "#g.bind(\"rit\", RIT)\n",
     "\n",
     "print(\"--- serializing ---\")\n",
     "s=g.serialize(format='xml') "
@@ -337,14 +463,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+      "<rdf:RDF\n",
+      "   xmlns:foaf=\"http://xmlns.com/foaf/0.1/\"\n",
+      "   xmlns:ns1=\"http://rcg.group.shef.ac.uk/resitowl/resit#\"\n",
+      "   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
+      ">\n",
+      "  <rdf:Description rdf:nodeID=\"N49f154ca80bc4d9b84eb46bf115c5294\">\n",
+      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#ismemberof\"/>\n",
+      "    <foaf:name>Donna Fales</foaf:name>\n",
+      "    <rdf:type rdf:resource=\"http://xmlns.com/foaf/0.1/Person\"/>\n",
+      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#isa\"/>\n",
+      "    <foaf:mbox rdf:resource=\"mailto:donna@example.org\"/>\n",
+      "    <ns1:hpcs>iceberg</ns1:hpcs>\n",
+      "    <foaf:nick xml:lang=\"foo\">donna</foaf:nick>\n",
+      "  </rdf:Description>\n",
+      "</rdf:RDF>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(g.serialize().decode())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
