--- a/examples/parseowl-turtle-format.ipynb
+++ b/examples/parseowl-turtle-format.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<rdf:RDF\\n   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\\n>\\n  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#sharc\">\\n    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpcs\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#iceberg\">\\n    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpcs\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Ontology\"/>\\n  </rdf:Description>\\n</rdf:RDF>\\n'\n"
+      "b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<rdf:RDF\\n   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\\n   xmlns:rit=\"http://rcg.group.shef.ac.uk/resitowl/resit#\"\\n>\\n  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#sharc\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpcs\"/>\\n    <rit:isa rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#iceberg\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpcs\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Ontology\"/>\\n  </rdf:Description>\\n</rdf:RDF>\\n'\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
