parse-csv-write-resitrdf using namespace rit and multiple nodes

--- a/examples/parse-csv-write-resitrdf.ipynb
+++ b/examples/parse-csv-write-resitrdf.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,100 +286,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
-      "<rdf:RDF\n",
-      "   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
-      "   xmlns:rdfs=\"http://www.w3.org/2000/01/rdf-schema#\"\n",
-      ">\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpcs\">\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#service\"/>\n",
-      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\n",
-      "    <rdfs:label>hpcs</rdfs:label>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#researchsoftware\">\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "    <rdfs:label>researchsoftware</rdfs:label>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#service\"/>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#schedgroup\">\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#feature\"/>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdfs:label>schedgroup</rdfs:label>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#ismemberof\">\n",
-      "    <rdfs:label>ismemberof</rdfs:label>\n",
-      "    <rdfs:subPropertyOf rdf:resource=\"http://www.w3.org/2002/07/owl#topObjectProperty\"/>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#ObjectProperty\"/>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#isa\">\n",
-      "    <rdfs:label>isa</rdfs:label>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#ObjectProperty\"/>\n",
-      "    <rdfs:subPropertyOf rdf:resource=\"http://www.w3.org/2002/07/owl#topObjectProperty\"/>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#\">\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Ontology\"/>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#group\">\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#feature\"/>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "    <rdfs:label>group</rdfs:label>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#personnel\">\n",
-      "    <rdfs:label>personnel</rdfs:label>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit\">\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#system\">\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "    <rdfs:label>system</rdfs:label>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\">\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#system\"/>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "    <rdfs:label>hpc</rdfs:label>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#feature\">\n",
-      "    <rdfs:label>feature</rdfs:label>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#service\">\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "    <rdfs:label>service</rdfs:label>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#project\">\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "    <rdfs:subClassOf rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#feature\"/>\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\n",
-      "    <rdfs:label>project</rdfs:label>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#iceberg\">\n",
-      "    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\n",
-      "    <rdfs:label>iceberg</rdfs:label>\n",
-      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit\"/>\n",
-      "  </rdf:Description>\n",
-      "</rdf:RDF>\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "rdflib.term.URIRef('http://xmlns.com/foaf/0.1/person')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -395,8 +313,8 @@
     "#n['first%20name'] # as item - for things that are not valid python identifiers\n",
     "# = rdflib.term.URIRef(u'http://example.org/first%20name')\n",
     "\n",
-    "grit = rdflib.Graph()\n",
-    "grit.parse('resit.ttl', format='turtle')\n",
+    "#Rgrit = rdflib.Graph()\n",
+    "#Rgrit.parse('resit.ttl', format='turtle')\n",
     "\n",
     "#RIT=Namespace('rit:')\n",
     "#RIT.hpcs=rdflib.term.URIRef(u'http://rcg.group.shef.ac.uk/resitowl/resit#hpcs')\n",
@@ -409,7 +327,7 @@
     "RIT = Namespace('http://rcg.group.shef.ac.uk/resitowl/resit#')\n",
     "namespace_manager = NamespaceManager(Graph())\n",
     "namespace_manager.bind('rit', RIT, override=False)\n",
-    "RIT.hpcs=rdflib.term.URIRef(u'http://rcg.group.shef.ac.uk/resitowl/resit#hpcs')\n",
+    "#RRIT.hpcs=rdflib.term.URIRef(u'http://rcg.group.shef.ac.uk/resitowl/resit#hpcs')\n",
     "FOAF.person\n",
     "\n",
     "#RIT.hpcs\n",
@@ -417,12 +335,29 @@
     "#s = grit.serialize(format='n3')\n",
     "#print(s)\n",
     "\n",
-    "print(grit.serialize().decode())\n"
+    "#Rprint(grit.serialize().decode())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object Graph.objects at 0x10f1c1ed0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(grit.objects('rit.hpcs'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,12 +370,25 @@
     "g.add( (resit, FOAF.name, Literal(\"Donna Fales\")) )\n",
     "g.add( (resit, FOAF.mbox, URIRef(\"mailto:donna@example.org\")) )\n",
     "\n",
+    "g.add((resit,RIT.isa,URIRef(\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\")))\n",
     "g.add( (resit, RIT.hpcs, Literal('iceberg') ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an identifier to use as the subject for Donna.\n",
+    "resit1 = BNode('http://rcg.group.shef.ac.uk/resitowl/resit#sharc')\n",
+    "g.add( (resit1, RIT.hpcs, Literal('sharc') ) )\n",
+    "g.add((resit1,RIT.isa,URIRef(\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\")))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +403,7 @@
     "# Bind a few prefix, namespace pairs for more readable output\n",
     "g.bind(\"dc\", DC)\n",
     "g.bind(\"foaf\", FOAF)\n",
-    "#g.bind(\"rit\", RIT)\n",
+    "g.bind(\"rit\", RIT)\n",
     "\n",
     "print(\"--- serializing ---\")\n",
     "s=g.serialize(format='xml') "
@@ -463,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -473,17 +421,26 @@
       "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
       "<rdf:RDF\n",
       "   xmlns:foaf=\"http://xmlns.com/foaf/0.1/\"\n",
-      "   xmlns:ns1=\"http://rcg.group.shef.ac.uk/resitowl/resit#\"\n",
       "   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
+      "   xmlns:rit=\"http://rcg.group.shef.ac.uk/resitowl/resit#\"\n",
       ">\n",
-      "  <rdf:Description rdf:nodeID=\"N49f154ca80bc4d9b84eb46bf115c5294\">\n",
-      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#ismemberof\"/>\n",
-      "    <foaf:name>Donna Fales</foaf:name>\n",
-      "    <rdf:type rdf:resource=\"http://xmlns.com/foaf/0.1/Person\"/>\n",
+      "  <rdf:Description rdf:nodeID=\"N481e3435d9d3455e9f36c565c15b2763\">\n",
+      "    <rit:isa rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\"/>\n",
+      "    <rit:hpcs>sharc</rit:hpcs>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:nodeID=\"N97cb8c7b54814d8280c87d8e83acc501\">\n",
       "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#isa\"/>\n",
-      "    <foaf:mbox rdf:resource=\"mailto:donna@example.org\"/>\n",
-      "    <ns1:hpcs>iceberg</ns1:hpcs>\n",
+      "    <rdf:type rdf:resource=\"http://xmlns.com/foaf/0.1/Person\"/>\n",
       "    <foaf:nick xml:lang=\"foo\">donna</foaf:nick>\n",
+      "    <rit:isa rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\"/>\n",
+      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#ismemberof\"/>\n",
+      "    <foaf:mbox rdf:resource=\"mailto:donna@example.org\"/>\n",
+      "    <rit:hpcs>iceberg</rit:hpcs>\n",
+      "    <foaf:name>Donna Fales</foaf:name>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:nodeID=\"http://rcg.group.shef.ac.uk/resitowl/resit#sharc\">\n",
+      "    <rit:hpcs>sharc</rit:hpcs>\n",
+      "    <rit:isa rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\"/>\n",
       "  </rdf:Description>\n",
       "</rdf:RDF>\n",
       "\n"
