rdf about node definition

--- a/examples/parse-csv-write-resitrdf.ipynb
+++ b/examples/parse-csv-write-resitrdf.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,25 +281,14 @@
     "g = Graph()\n",
     "\n",
     "# Create an identifier to use as the subject for Donna.\n",
-    "resit = BNode()"
+    "resit = BNode(RDF.about)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "rdflib.term.URIRef('http://xmlns.com/foaf/0.1/person')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#n=Namespace()\n",
     "\n",
@@ -335,19 +324,24 @@
     "#s = grit.serialize(format='n3')\n",
     "#print(s)\n",
     "\n",
-    "#Rprint(grit.serialize().decode())\n"
+    "#Rprint(grit.serialize().decode())\n",
+    "resit2=rdflib.term.URIRef('http://rcg.group.shef.ac.uk/resitowl/resit#resit2')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<generator object Graph.objects at 0x10f1c1ed0>\n"
+     "ename": "NameError",
+     "evalue": "name 'grit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-c3cfae64c6e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobjects\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'rit.hpcs'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'grit' is not defined"
      ]
     }
    ],
@@ -357,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,19 +370,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create an identifier to use as the subject for Donna.\n",
     "resit1 = BNode('http://rcg.group.shef.ac.uk/resitowl/resit#sharc')\n",
     "g.add( (resit1, RIT.hpcs, Literal('sharc') ) )\n",
-    "g.add((resit1,RIT.isa,URIRef(\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\")))\n"
+    "g.add((resit1,RIT.isa,URIRef(\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\")))\n",
+    "\n",
+    "g.add( (resit2, RIT.hpcs, Literal('sharc2') ) )\n",
+    "g.add((resit2,RIT.isa,URIRef(\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\")))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -424,22 +421,22 @@
       "   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
       "   xmlns:rit=\"http://rcg.group.shef.ac.uk/resitowl/resit#\"\n",
       ">\n",
-      "  <rdf:Description rdf:nodeID=\"N481e3435d9d3455e9f36c565c15b2763\">\n",
-      "    <rit:isa rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\"/>\n",
+      "  <rdf:Description rdf:nodeID=\"http://rcg.group.shef.ac.uk/resitowl/resit#sharc\">\n",
       "    <rit:hpcs>sharc</rit:hpcs>\n",
-      "  </rdf:Description>\n",
-      "  <rdf:Description rdf:nodeID=\"N97cb8c7b54814d8280c87d8e83acc501\">\n",
-      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#isa\"/>\n",
-      "    <rdf:type rdf:resource=\"http://xmlns.com/foaf/0.1/Person\"/>\n",
-      "    <foaf:nick xml:lang=\"foo\">donna</foaf:nick>\n",
       "    <rit:isa rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\"/>\n",
+      "  </rdf:Description>\n",
+      "  <rdf:Description rdf:nodeID=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#about\">\n",
+      "    <foaf:nick xml:lang=\"foo\">donna</foaf:nick>\n",
       "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#ismemberof\"/>\n",
+      "    <rit:isa rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\"/>\n",
+      "    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#isa\"/>\n",
       "    <foaf:mbox rdf:resource=\"mailto:donna@example.org\"/>\n",
       "    <rit:hpcs>iceberg</rit:hpcs>\n",
       "    <foaf:name>Donna Fales</foaf:name>\n",
+      "    <rdf:type rdf:resource=\"http://xmlns.com/foaf/0.1/Person\"/>\n",
       "  </rdf:Description>\n",
-      "  <rdf:Description rdf:nodeID=\"http://rcg.group.shef.ac.uk/resitowl/resit#sharc\">\n",
-      "    <rit:hpcs>sharc</rit:hpcs>\n",
+      "  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#resit2\">\n",
+      "    <rit:hpcs>sharc2</rit:hpcs>\n",
       "    <rit:isa rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpc\"/>\n",
       "  </rdf:Description>\n",
       "</rdf:RDF>\n",
