developing RDF file for research IT

--- a/examples/parse-csv-write-resitrdf.ipynb
+++ b/examples/parse-csv-write-resitrdf.ipynb
@@ -325,6 +325,7 @@
     "#print(s)\n",
     "\n",
     "#Rprint(grit.serialize().decode())\n",
+    "#add a node defined by the URIRef\n",
     "resit2=rdflib.term.URIRef('http://rcg.group.shef.ac.uk/resitowl/resit#resit2')\n"
    ]
   },
