--- a/examples/parserdf-writeturtle.ipynb
+++ b/examples/parserdf-writeturtle.ipynb
@@ -25,7 +25,8 @@
     "try:\n",
     "    #g.parse('foaf-def.rdf')\n",
     "    #g.parse('foaf-example.rdf')\n",
-    "    g.parse('pizza.owl')\n",
+    "    #g.parse('pizza.owl')\n",
+    "    g.parse('resitfile.rdf')\n",
     "except FileNotFoundError:\n",
     "    # This test might be run from the parent directory root\n",
     "    print('file not found trying something else!')\n",
@@ -59,7 +60,8 @@
    "source": [
     "#file = open('foaf-def.ttl','wb') \n",
     "#file = open('foaf-example.ttl','wb') \n",
-    "file = open('pizza.ttl','wb') \n",
+    "#ffile = open('pizza.ttl','wb') \n",
+    "ffile = open('resitfile.ttl','wb') \n",
     "ss=str(s)\n",
     "file.write(s) \n",
     "\n",
